[package]
name = "nftDex"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_dex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { git = "https://github.com/chugach-foundation/anchor.git" }
anchor-spl = { git = "https://github.com/chugach-foundation/anchor.git", features = [ "token", "associated_token", "dex", "mainnet-beta" ] }
solana-client = "~1.10.25"
solana-sdk = "~1.10.25" 
solana-account-decoder = "~1.10.25"
arrayref = "0.3.6"
spl-token = "3.3.0"

[scripts]

